画像データをAWS,S3に移行

--- a/environments/db.env
+++ b/environments/db.env
@@ -1,3 +1,6 @@
 MYSQL_ROOT_PASSWORD=password
 MYSQL_USER=root
 MYSQL_PASSWORD=password
+
+AWS_ACCESS_KEY_ID=AKIAQ6UZKU3P2YPKHTIB
+AWS_SECRET_ACCESS_KEY=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
