--- a/config/database.yml
+++ b/config/database.yml
@@ -13,3 +13,14 @@ development:
 test:
   <<: *default
   database: webapp_test
+
+production:
+  <<: *default
+  database: <%= ENV['DB_DATABASE'] %>
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  host: <%= ENV['DB_HOST'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
